FIX min for double and float